--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Novatech Store</title>
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header class="header">
